MVP 1: fixes from manual testing
